- 1.14 released -

Increased the maximum number of boot floppies, as four is no longer
enough for amd64.

New command line option "--run".

Added the words "OR CONTRIBUTORS" to the disclaimer of liabilities
in the copyright notice.

- 1.13 released -

When installing NetBSD/sparc, use a terminal type of "xterm" rather
than "sun", as anita is more likely run from an xterm or other
ANSI-like terminal than from a sun console.

In the BUGS section of the man page, mention the specific NetBSD ports
affected.

Fix typos in the man page.

- 1.12 released -

Add support for the amd64 and sparc ports as targets.

Improve error reporting for common types of unsuitable URLs.

Avoid sending multiple responses when the NetBSD 3.0.1 sysinst
updates the menu display multiple times.

New command line option "--disk-size".

- 1.11 released -

Remove '-serial stdio' from qemu argument list.  It's not actually
needed when the '-nographic' option is present, and it confuses
qemu 0.12.

- 1.10 released -

Deal with recent sysinst changes: sysinst no longer displays a dialog
to select the CD-ROM device path, etc.

New command line option "--qemu-args".

Anita no longer passes the "-no-acpi" option to qemu by default,
because the ACPI case now works with -current, and disabling
ACPI triggers other bugs.  See PR port-i386/42681 for more details.

- 1.9 released -

Deal with recent renumbering of password encryption choices in sysinst.

- 1.8 released -

Increase timeouts, particularly when extracting sets and running the
ATF tests

Document the "test" command and path-in-place-of-URL

- 1.7 released -

Remove workaround for lib/39175, which broke the installation
of the "comp" set

Add "test" command for running the ATF tests

Accept a local distribution directory path in place of a URL

Check for missing slash at end of distribution directory URL

Detect HTTP 404 errors

- 1.6 released -